font to 15, baseurl/

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ title:            'Mike Sturm'
 tagline:          'I am but a man, and a foolish one at that. But I am your fool. Your Fool Laureate.'
 description:      'Navigating through reality like a punctured dirigible.'
 url:              http://mikesturm.net/minimal
-baseurl:          '/minimal'
+baseurl:          '/minimal/'
 paginate:         10
 excerpt_separator: "<!--more-->"
 
