--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@ permalink:        pretty
 title:            'Mike Sturm'
 tagline:          'I am but a man, and a foolish one at that. But I am your fool. Your Fool Laureate.'
 description:      'Navigating through reality like a punctured dirigible.'
-url:              http://mikesturm.net/minimal
-baseurl:          '/minimal/'
+url:              http://mikesturm.net
+baseurl:          'http://www.mikesturm.net/'
 paginate:         10
 excerpt_separator: "<!--more-->"
 
