--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,7 @@ tagline:          'I am but a man, and a foolish one at that. But I am your fool
 description:      'Navigating through reality like a punctured dirigible.'
 url:              http://mikesturm.net
 baseurl:          'http://www.mikesturm.net/'
+paginate_path:    "/blog/page:num/"
 paginate:         10
 # excerpt_separator: "<!--more-->"
 
